--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   renderStars();
 
   // 3) Config: tu Worker endpoint (lo pondrás en el paso 3)
-  const API_BASE = "REEMPLAZA_POR_TU_WORKER_URL"; // ej: https://api-rateabici.tudominio.workers.dev
+  const API_BASE = "https://comvabicing.andrescarvajalquero.workers.dev";
 
   async function loadBike(bikeId) {
     document.getElementById("view").style.display = "block";
