Change project title and branding
Updated the title and branding for the project, changing references from 'RodaBé' to 'ComVaBicing'.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>RodaBé</title>
+  <title>ComVaBicing</title>
   <meta name="description" content="Valora bicicletes públiques per ID (1–5 estrelles + comentari)." />
   <style>
     :root{
@@ -226,10 +226,10 @@
   <div class="wrap">
     <header>
       <div class="brand">
-        <div class="logo">RB</div>
+        <div class="logo">CB</div>
         <div>
-          <h1>RodaBé</h1>
-          <p>Valora bicicletes públiques per ID · ⭐ 1–5 + comentari</p>
+          <h1>ComVaBicing</h1>
+          <p>Com va aquesta bici? Valora-la amb ⭐ 1–5 i comentari</p>
         </div>
       </div>
       <div class="badge">No oficial</div>
@@ -242,7 +242,7 @@
           <input id="bikeId" placeholder="Ex: 12345" inputmode="numeric" />
           <button id="go" class="primary">Veure</button>
         </div>
-        <p class="hint">Consell: posa l’ID tal com surt a l’etiqueta/QR.</p>
+        <p class="hint">Introdueix l’ID tal com apareix al costat de la bici.</p>
       </section>
 
       <section class="card" id="view" style="display:none;">
@@ -279,7 +279,7 @@
     </div>
 
     <footer>
-      Fet per la comunitat. Si us plau, no hi posis dades personals.
+      Projecte comunitari i no oficial. Si us plau, no hi posis dades personals.
     </footer>
   </div>
 
