--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#0b0c10" media="(prefers-color-scheme: dark)" />
   <meta name="theme-color" content="#f6f7fb" media="(prefers-color-scheme: light)" />
   <title>ComVaBicing</title>
+  <link rel="icon" type="image/png" href="/favicon.png">
   <meta name="description" content="Valora bicicletes públiques per ID (1–5 estrelles + comentari)." />
   <style>
     :root{
